fixed navbar on mobile

--- a/FrontEndCode/style.css
+++ b/FrontEndCode/style.css
@@ -266,7 +266,7 @@ nav {
 /*links styles for mobile*/
 nav a {
   position:relative;
-  width:50%;
+  width:45%;
   color: #f2f2f2;
   padding: 14px 16px;
   text-decoration: none;
